--- a/src/app/nav/nav-bar.component.html
+++ b/src/app/nav/nav-bar.component.html
@@ -1,15 +1,15 @@
 <div class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand">ngEvents</a>
+      <a [routerLink]="['/events']" class="navbar-brand">ngEvents</a>
     </div>
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a>All Events</a>
+          <a [routerLink]="['/events']">All Events</a>
         </li>
-        <li><a href="">Create Event</a></li>
+        <li><a [routerLink]="['/events/new']">Create Event</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             Events
