--- a/src/app/user/profile.component.html
+++ b/src/app/user/profile.component.html
@@ -5,13 +5,15 @@
         <form [formGroup]="profileForm" (ngSubmit)="saveProfile(profileForm.value)" autocomplete="off" novalidate>
             <div class="form-group" [ngClass]="{'error': !validateFirstName()}">
                 <label for="firstName">First Name: </label>
-                <em *ngIf="!validateFirstName()">Required</em>
+                <em *ngIf="!validateFirstName() && profileForm.controls.firstName.errors.required">Required</em>
+                <em *ngIf="!validateFirstName() && profileForm.controls.firstName.errors.pattern">Must start with a letter</em>
                 <input formControlName="firstName" type="text" id="firstName" class="form-control" placeholder="First name...">
             </div>
 
             <div class="form-group" [ngClass]="{'error': !validateLastName()}">
                 <label for="lastName">Last Name: </label>
-                <em *ngIf="!validateLastName()">Required</em>
+                <em *ngIf="!validateLastName() && profileForm.controls.lastName.errors.required">Required</em>
+                <em *ngIf="!validateLastName() && profileForm.controls.lastName.errors.pattern">Must start with a letter</em>
                 <input formControlName="lastName" type="text" id="lastName" class="form-control" placeholder="Last name...">
             </div>
 
